third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/double-point-1.stderr
TOML parse error at line 1, column 20
  |
1 | double-point-1 = 0..1
  |                    ^
invalid floating-point number
expected digit
